commit 1 INDEX.HTML

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                     <h2>Contato</h2>
                     <div>
                         <img src="local.png" title="Ícone local" alt="Ícone local">
-                        <span>Rio de Janeiro, RJ</span>
+                        <span>Novo Gama, Goiás</span>
                     </div>
                     <div>
                         <img src="telefone.png" title="Ícone telefone" alt="Ícone telefone">
-                        <span>Telefone: (21) 9999-9999</span>
+                        <span>Telefone: (61) 99554-3298</span>
                     </div>
                     <div>
                         <img src="email.png" title="Ícone email" alt="Ícone email">
@@ -173,15 +173,15 @@
                     <h2>Nossas Redes Sociais</h2>
                     <div>
                         <img src="fb.png" title="Ícone facebook" alt="Ícone facebook">
-                        <span>/AgenciaDeViagem</span>
+                        <span>/jsdesenvolvimentoweb</span>
                     </div>
                     <div>
                         <img src="ig.png" title="Ícone instagram" alt="Ícone instagram">
-                        <span>@AgenciaDeViagem</span>
+                        <span>@william.ferreira.web</span>
                     </div>
                     <div>
                         <img src="tt.png" title="Ícone twitter" alt="Ícone twitter">
-                        <span>@AgenciaDeViagem</span>
+                        <span>@williamferreira</span>
                     </div>
                 </div>
             </div>
